# RMUS-2023

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  start.sh
scripts/: halt.sh  launch_debug.sh  launch_ros_noetic_full.sh  place_blocks.sh  reset.sh  sync2container.sh
src/rmus_solution/carto_navigation/rviz/: navigation.rviz
src/rmus_solution/rmus_solution/: CMakeLists.txt  package.xml
src/rmus_solution/rmus_solution/launch/: carto_navigation.launch  start_game.launch
src/rmus_solution/rmus_solution/msg/: Square.msg  SquareArray.msg
src/rmus_solution/rmus_solution/scripts/: detect.py  img_processor.py  manipulator.py  navi.py  navi_control.py  pid.py  play_game.py
